Response tabs: loading states and error states improved. RAW text looks nicer, preview alignment/borders fixed. Easter egg added.... hehehehehehe MUAHAHAHA

--- a/app/browser/less/editor.less
+++ b/app/browser/less/editor.less
@@ -305,15 +305,53 @@
   .ace-editor-customization;
 }
 
-.response-raw {
+.response-body-parsed {
+  margin-top: 0;
+  position: relative;
+  padding-top: 0;
+  .ace-editor-customization;
+}
+
+.response-body-raw {
   margin-top: 5px;
   position: relative;
   padding-top: 25px;
+  .ace-editor-customization;
 }
 
-.response-preview{
+.response-preview {
+  line-height: 0; // Eliminate gap at bottom of iframe
+  margin: -15px;  // Eliminate all surrounding gaps
+  height: 480px;
+
   iframe {
+    border: 0;
+    border-bottom-left-radius: 3px;
+    border-bottom-right-radius: 3px;
     width: 100%;
     height: 100%;
+  }
+}
+
+.response-body-unreachable {
+  margin-top: 0;
+  position: relative;
+  padding-top: 0;
+
+  img {
+    float: left;
+    width: 110px;
+  }
+
+  div {
+    overflow: hidden;
+  }
+
+  h4 {
+    margin: 5px 5px 10px 20px;
+  }
+
+  ol {
+    margin: 0;
   }
 }
